--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
+
+html {
+    font-size: 12px !important;
+}
+
+.two-column-text {
+    column-count: 2;
+    column-gap: 2rem; /* optional spacing between columns */
+    font-family: sans-serif;
+    line-height: 1.6;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
